--- a/index.html
+++ b/index.html
@@ -156,15 +156,11 @@
 </div>
 </section>
 <section id="testimonials">
-    <!-- Container to heading and testm blocks -->
     <div class="max-w-6xl px-5 mx-auto mt-32 text-center">
-      <!-- Heading -->
       <h2 class="text-4xl font-bold text-center">
         What's Different About Manage?
       </h2>
-      <!-- Testimonials Container -->
       <div class="flex flex-col mt-24 md:flex-row md:space-x-6">
-        <!-- Testimonial 1 -->
         <div
           class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3"
         >
@@ -177,7 +173,6 @@
           </p>
         </div>
 
-        <!-- Testimonial 2 -->
         <div
           class="hidden flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/3"
         >
@@ -190,7 +185,6 @@
           </p>
         </div>
 
-        <!-- Testimonial 3 -->
         <div
           class="hidden flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/3"
         >
@@ -203,7 +197,6 @@
           </p>
         </div>
       </div>
-      <!-- Button -->
       <div class="my-16">
         <a
           href="#"
@@ -214,7 +207,97 @@
     </div>
   </section>
 
+<section id="cta" class="bg-brightRed">
+    <div class="container flex flex-col items-center justify-between px-6 py-24 mx-auto space-y-12 md:py-12 md:flex-row md:space-y-0">
+        <h2 class="text-5xl font-bold leading-tight text-center text-white md:text-4xl md:max-w-xl md:text-left">
+            Simplify how your team works today
+        </h2>
+        <div>
+            <a
+              href="#"
+              class="p-3 px-6 pt-2 text-brightRed bg-white rounded-full shadow-2xl baseline hover:bg-gray-900"
+              >Get Started</a
+            >
+          </div>
+    </div>
 
+</section>
+<footer class="bg-veryDarkBlue">
+    <!-- Flex Container -->
+    <div
+      class="container flex flex-col-reverse justify-between px-6 py-10 mx-auto space-y-8 md:flex-row md:space-y-0"
+    >
+      <!-- Logo and social links container -->
+      <div
+        class="flex flex-col-reverse items-center justify-between space-y-12 md:flex-col md:space-y-0 md:items-start"
+      >
+        <div class="mx-auto my-6 text-center text-white md:hidden">
+          Copyright &copy; 2022, All Rights Reserved
+        </div>
+        <!-- Logo -->
+        <div>
+          <img src="img/logo-white.svg" class="h-8" alt="" />
+        </div>
+        <!-- Social Links Container -->
+        <div class="flex justify-center space-x-4">
+          <!-- Link 1 -->
+          <a href="#">
+            <img src="img/icon-facebook.svg" alt="" class="h-8" />
+          </a>
+          <!-- Link 2 -->
+          <a href="#">
+            <img src="img/icon-youtube.svg" alt="" class="h-8" />
+          </a>
+          <!-- Link 3 -->
+          <a href="#">
+            <img src="img/icon-twitter.svg" alt="" class="h-8" />
+          </a>
+          <!-- Link 4 -->
+          <a href="#">
+            <img src="img/icon-pinterest.svg" alt="" class="h-8" />
+          </a>
+          <!-- Link 5 -->
+          <a href="#">
+            <img src="img/icon-instagram.svg" alt="" class="h-8" />
+          </a>
+        </div>
+      </div>
+      <!-- List Container -->
+      <div class="flex justify-around space-x-32">
+        <div class="flex flex-col space-y-3 text-white">
+          <a href="#" class="hover:text-brightRed">Home</a>
+          <a href="#" class="hover:text-brightRed">Pricing</a>
+          <a href="#" class="hover:text-brightRed">Products</a>
+          <a href="#" class="hover:text-brightRed">About</a>
+        </div>
+        <div class="flex flex-col space-y-3 text-white">
+          <a href="#" class="hover:text-brightRed">Careers</a>
+          <a href="#" class="hover:text-brightRed">Community</a>
+          <a href="#" class="hover:text-brightRed">Privacy Policy</a>
+        </div>
+      </div>
 
+      <!-- Input Container -->
+      <div class="flex flex-col justify-between">
+        <form>
+          <div class="flex space-x-3">
+            <input
+              type="text"
+              class="flex-1 px-4 rounded-full focus:outline-none"
+              placeholder="Updated in your inbox"
+            />
+            <button
+              class="px-6 py-2 text-white rounded-full bg-brightRed hover:bg-brightRedLight focus:outline-none"
+            >
+              Go
+            </button>
+          </div>
+        </form>
+        <div class="hidden text-white md:block">
+          Copyright &copy; 2022, All Rights Reserved
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
